--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/katie-rey/ticket-system-MERN-stack.git"
+  },
+  "bugs": {
+    "url": "https://github.com/katie-rey/ticket-system-MERN-stack/issues"
+  },
+  "homepage": "https://github.com/katie-rey/ticket-system-MERN-stack#readme"
 }
