--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "support ticket app",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Katie Rey",
   "license": "MIT",
@@ -13,17 +15,10 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/katie-rey/ticket-system-MERN-stack.git"
-  },
-  "bugs": {
-    "url": "https://github.com/katie-rey/ticket-system-MERN-stack/issues"
-  },
-  "homepage": "https://github.com/katie-rey/ticket-system-MERN-stack#readme"
+    "nodemon": "^2.0.15"
+  }
 }
